--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,3 +28,32 @@
   font-weight: 400;
   height: 48px !important;
 }
+
+/* Vehicle Widgets */
+.vehicle-widget,
+.vehicle-dashboard-widget {
+  .v-toolbar__title {
+    @extend .font-roboto-condensed;
+    font-size: 1.35rem;
+  }
+  .v-card__actions.pager {
+    height: 60px;
+  }
+  .action-icon {
+    justify-content: center;
+    align-items: center;
+    max-width:24px;
+  }
+}
+.widget-list {
+  .v-list-item__content {
+    .v-list-item__title {
+      font-weight: 400 !important;
+      @extend .font-roboto-condensed;
+    }
+    .v-list-item__subtitle {
+      font-weight: 400 !important;
+      @extend .font-roboto;
+    }
+  }
+}
