--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,6 +29,21 @@
   height: 48px !important;
 }
 
+/* App Bar with Image bg */
+.emkay-image-nav {
+  position: sticky;
+  top: 64px;
+  left: 0;
+  right: 0;
+  z-index: 4;
+
+  .v-toolbar__title {
+    @extend .font-lato;
+    font-size: 2.5rem !important;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.25);
+  }
+}
+
 /* Vehicle Widgets */
 .vehicle-widget,
 .vehicle-dashboard-widget {
