--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,10 +39,13 @@
 
   .v-toolbar__title {
     a {
-      @extend .font-lato;
       font-size: 2.5rem !important;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.25);
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+      letter-spacing: 2px;
+      // letter-spacing: 0.25rem;
     }
+    @extend .font-roboto;
+    text-transform: uppercase;
     text-align: center;
     width: 100%;
   }
